--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -721,6 +721,23 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# When unpacking a list, you can use _ to ignore certan values.\n",
+        "\n",
+        "coordinates = [2.35, 6.37, -8.94]\n",
+        "x, _, z = coordinates\n",
+        "\n",
+        "print(x)\n",
+        "print(z)"
+      ],
+      "metadata": {
+        "id": "C-a3HcSdVPiq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "Note\n",
@@ -7523,14 +7540,7 @@
       "cell_type": "markdown",
       "source": [
         "4.2 For loops\n",
-        "---\n",
-        "A for loop is an iterative function that allows you to iterate over a data sequence. There are two keywords in the for loop structure: \"for\" and \"in\". The for loop statement will access each element of the sequence at each iteration. The loop will continue iterating until it reaches the last element of a sequence.\n",
-        "\n",
-        "---\n",
-        "\n",
-        "Syntax:\n",
-        "\n",
-        "        for variable in iterable: block of code\n"
+        "---"
       ],
       "metadata": {
         "id": "H8Dj1zvhkvvG"
@@ -7539,14 +7549,60 @@
     {
       "cell_type": "markdown",
       "source": [
-        "For loop\n",
-        "---\n",
-        "Here are some examples of for loop declarations and basic forms.\n",
+        "Description\n",
         "\n",
+        "---\n",
+        "A *for* loop is used to iterate over a sequence ( such as a list, tuple, string, or range collections) and execute a block of code repeatedly for each item in the sequence. It is one of the most commonly used loops in Python due to its simplicity and readability. The loop begins with the *for* keyword, followed by a variable that represents the current item in the sequence, and the *in* keyword to specify the sequence. The block of code to be executed is indented underneath. A *for* loop is practicaly useful when you know the number of iterations or want to process every item in a collection without manually indexing each element."
+      ],
+      "metadata": {
+        "id": "9tKefx77SJ0z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          for variable in sequence:\n",
+        "              block of code"
+      ],
+      "metadata": {
+        "id": "FPgqaRH0TaX9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For loop\n",
         "---"
       ],
       "metadata": {
         "id": "Kcq1A-n4wheh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "\n",
+        "A *for* loop is an iterative function that allows you to iterate over a data sequence. There are two keywords in the for loop structure: \"for\" and \"in\". The for loop statement will access each element of the sequence at each iteration. The loop will continue iterating until it reaches the last element of a sequence."
+      ],
+      "metadata": {
+        "id": "JgYJKhifTqKq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "f2Ww-NdBTyk5"
       }
     },
     {
@@ -7594,13 +7650,33 @@
       "cell_type": "markdown",
       "source": [
         "For loop with no elements\n",
-        "---\n",
-        "Here's an example of a for loop with no elements. It is a convention to use an underscore as a variable name when you would like to iterate over a sequence, but do not want to use the individual elements.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "iwVj3gAiSaQK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "When you use underscore (_) in for loop statement it is used as a placeholder for values you want to ignore. Here's an example of a for loop with throwaway variable. It is a convention to use an underscore as a variable name when you would like to iterate over a sequence, but do not want to use the individual elements."
+      ],
+      "metadata": {
+        "id": "_46-bDcIUUC_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Example\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "EZLd__kOVEBF"
       }
     },
     {
