--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -805,6 +805,23 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Note\n",
+        "\n",
+        "---\n",
+        "Single leading underscore ( _myVariable ) indicates that a variable is intended for internal use or should be treated as private, however, it does not enforce\n",
+        "strict privacy. It is convention among programmers to indicate that a variable or a method is not meant for public use.\n",
+        "\n",
+        "Double leading underscore ( _ _myVaraible ) triggers name mangling, where the interpreter changes the variable name to prevent accidental overriding in subclasses, protecting its name.\n",
+        "\n",
+        "Single trailing underscore ( myVariable_ ) can be used to avoid naming conflicts with python keywords. For instance, ( class_ ) can be used instead of class, which is reserved keyword."
+      ],
+      "metadata": {
+        "id": "4hvE-vKtl5aY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "1.4 Data types\n",
         "---"
       ],
@@ -1794,11 +1811,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "* Convert to uppercase: str.upper()\n",
-        "* Convert to lowercase: str.lower()\n",
-        "* Remove leading/trailing whitespace: str.strip()\n",
-        "* Replaces a string with another string: str.replace(\"old\",\"new\")\n",
-        "* Splits string into a list: str.split(\"separator\")"
+        "          myString.method()"
       ],
       "metadata": {
         "id": "I2iLOQqg7xk1"
@@ -1931,11 +1944,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "* Concatenation: str1 + str2\n",
-        "* Repitition:    str  * n\n",
-        "* Accessing characters: str[index]\n",
-        "* Slicing string: str[start:end]\n",
-        "* Membership: 'value' in str"
+        "          See examples below."
       ],
       "metadata": {
         "id": "xq1bmJ-F6z87"
@@ -4168,7 +4177,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "          See the examples below"
+        "          See examples below"
       ],
       "metadata": {
         "id": "bAktRoemomby"
@@ -4807,7 +4816,7 @@
         "\n",
         "---\n",
         "\n",
-        "      See the examples below"
+        "      See examples below"
       ],
       "metadata": {
         "id": "QdS6ALt_zboo"
@@ -5133,7 +5142,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "          mydictionary = {key1:{subkey1:value1, subkey2:value2}, key2:{subkey1:value3}}"
+        "          mydictionary = {key1:{subkey1:value1, subkey2:value2}, key2:{subkey1:value3}, ...}"
       ],
       "metadata": {
         "id": "vu2ecZr56Xws"
@@ -5529,7 +5538,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Syntax:\n",
+        "Syntax\n",
         "\n",
         "---\n",
         "          mySet = {element 1, element 2, ..., element n}\n",
@@ -5570,9 +5579,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "        mySet = {element1, element2, ... elementn}\n",
-        "\n",
-        "        mySet = set(iterable)\n"
+        "          See examples below"
       ],
       "metadata": {
         "id": "JWMRYK0jGSpJ"
@@ -6001,7 +6008,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "          See examples below."
+        "          See examples below"
       ],
       "metadata": {
         "id": "Qt8Yvf0YRxd7"
@@ -6166,6 +6173,18 @@
       ],
       "metadata": {
         "id": "OemHvV2bYZz_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          See examples below"
+      ],
+      "metadata": {
+        "id": "nqi4wcMTou7T"
       }
     },
     {
@@ -6380,7 +6399,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "          if ( arithmetic comparison): block of code"
+        "          if (arithmetic comparison): block of code"
       ],
       "metadata": {
         "id": "t4QrWYskEeRY"
@@ -6575,8 +6594,8 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "      if (condition):\n",
-        "          if (condition):\n",
+        "      if condition:\n",
+        "          if condition:\n",
         "              block of code"
       ],
       "metadata": {
@@ -6672,12 +6691,9 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "          if (condition):\n",
-        "\n",
+        "          if condition:\n",
         "              block of code\n",
-        "          \n",
         "          else:\n",
-        "          \n",
         "              block of code"
       ],
       "metadata": {
@@ -6704,6 +6720,18 @@
       ],
       "metadata": {
         "id": "4Uyl1UwRHefJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          See examples below"
+      ],
+      "metadata": {
+        "id": "cPXAQCeupAb0"
       }
     },
     {
@@ -6924,7 +6952,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "          See examples below."
+        "          See examples below"
       ],
       "metadata": {
         "id": "_citTBYqJBO0"
@@ -7017,7 +7045,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "          See examples below."
+        "          See examples below"
       ],
       "metadata": {
         "id": "-ZbKWIhuJv0u"
@@ -7119,7 +7147,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "      See examples below."
+        "      See examples below"
       ],
       "metadata": {
         "id": "GIjOxR4HKpqk"
@@ -7224,15 +7252,10 @@
         "\n",
         "---\n",
         "          if condition1:\n",
-        "\n",
         "              block of code\n",
-        "\n",
         "          elif condition2:\n",
-        "\n",
         "              block of code\n",
-        "\n",
         "          else:\n",
-        "\n",
         "              block of code"
       ],
       "metadata": {
@@ -7267,7 +7290,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "          See examples below."
+        "          See examples below"
       ],
       "metadata": {
         "id": "9F-bFbOcNgJA"
@@ -7416,7 +7439,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "          See examples below."
+        "          See examples below"
       ],
       "metadata": {
         "id": "xz6Hv7Z2Ou2T"
@@ -7487,7 +7510,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "      See examples below."
+        "      See examples below"
       ],
       "metadata": {
         "id": "OnP2QN1pPy-X"
@@ -7564,7 +7587,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "          for variable in sequence:\n",
+        "          for item in sequence:\n",
         "              block of code"
       ],
       "metadata": {
@@ -7592,6 +7615,18 @@
       ],
       "metadata": {
         "id": "JgYJKhifTqKq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          See examples below"
+      ],
+      "metadata": {
+        "id": "99yD8nEopbMw"
       }
     },
     {
@@ -7671,6 +7706,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          for _ in sequence:\n",
+        "             block of code"
+      ],
+      "metadata": {
+        "id": "PFyaUjttpiHE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Example\n",
         "\n",
         "---"
@@ -7699,13 +7747,46 @@
       "cell_type": "markdown",
       "source": [
         "For loops with data sequences\n",
-        "---\n",
-        "For loops are commonly used to iterate over data sequences like strings, lists, tuples, dictionaries, and sets. The for loop allows you to perform specific operations for each element in the sequence. Here are a few examples of for loops with data sequences.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "c0UlikyYQdW6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "For loops are commonly used to iterate over data sequences like strings, lists, tuples, dictionaries, and sets. These sequences contain multiple elements, and the *for* loop allows you to process each element one at a time. You can loop through strings character by character. You can loop through other structures the same way. Here are a few examples of for loops with data sequences."
+      ],
+      "metadata": {
+        "id": "2Y6IR4Ptqa70"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          for item in sequence:\n",
+        "              block of code"
+      ],
+      "metadata": {
+        "id": "Jh47N62lqftZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "bHdRll3gqdvB"
       }
     },
     {
@@ -7806,13 +7887,46 @@
       "cell_type": "markdown",
       "source": [
         "Dictionary methods with For loops\n",
-        "---\n",
-        "You can iterate through dictionaries using keys, values, or key-value pairs.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "-ovdU3uaKYVk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "You can use *for* loops with dictionary methods to efficiently iterate over keys, values, or both. Dictionaries store data in key-value pairs, looping through them allows you to process or analyze each pair. The keys() method lets you loop through just the keys, the values() method loops through the values, and items() method allows you to access both keys and values at the same time. These methods make it easy to navigate and manipulate dictionary data, which is especially useful when dealing with structured informatin like settings, records, or grouped data."
+      ],
+      "metadata": {
+        "id": "D0XYZJDmq2e7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          for item in myDictionary.method():\n",
+        "              block of code"
+      ],
+      "metadata": {
+        "id": "sEaLAGs9r1lF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "iXoLfGEUrzZK"
       }
     },
     {
@@ -7867,13 +7981,48 @@
       "cell_type": "markdown",
       "source": [
         "For loop with else statement\n",
-        "---\n",
-        "You can use else statements with a for loop to specify a block of code that should be executed after the loop has completed.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "ao5O4BwhTQ0O"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "A *for* loop can be paired with an *else* statement, which executes after the loop finishes iterating over all items. This feature is often used when searching for an item an needing to perform an action if the item is not found. The *for...else* structure adds a clean way to handle post-loop logic when no early exit occurs."
+      ],
+      "metadata": {
+        "id": "fK0W54RXsKhd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          for item in sequence:\n",
+        "              block of code\n",
+        "          else\n",
+        "              block of code"
+      ],
+      "metadata": {
+        "id": "Pi2CzVaRs0HT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "JHYeutyBtLzY"
       }
     },
     {
@@ -7898,13 +8047,64 @@
       "cell_type": "markdown",
       "source": [
         "For loop with break, continue, and pass statements\n",
-        "---\n",
-        "Break statements break out of the loops immediately. Continue statements proceed with the execution of the loop. A pass statement does nothing.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "hJfId0OePHkk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "*for* loops can be controlled more precisely using *break*, *continue*, and *pass* statements. The *break* statement immediately exits the loop when a certain condition is met, stopping any further iterations. The *continue* statementskips the rest of the current iteration and moves to the next itemin the sequence, allowing selective executionof loop code. The *pass* statement does nothing at all and serves as a placeholder when a statement is syntactucally correct and no action is needed. these control statements help make loop behavior more flexible and responsive to specific conditions."
+      ],
+      "metadata": {
+        "id": "JPFwJrqLtROp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          Using break statement\n",
+        "\n",
+        "          for item in sequence:\n",
+        "              if condition:\n",
+        "                  break\n",
+        "              block of code to execute if condition is False\n",
+        "\n",
+        "          Using continue statement\n",
+        "\n",
+        "          for item in sequence:\n",
+        "              if condition:\n",
+        "                  continue\n",
+        "              block of code to execute if condition is False\n",
+        "\n",
+        "          Using pass statement\n",
+        "\n",
+        "          for item in sequence:\n",
+        "              if condition:\n",
+        "                  pass\n",
+        "              block of code to execute regardless the condition status\n"
+      ],
+      "metadata": {
+        "id": "WlKzlTuGuR2Q"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "mCDEM-2Pu3Wh"
       }
     },
     {
@@ -7965,14 +8165,36 @@
       "cell_type": "markdown",
       "source": [
         "Nested For loop\n",
-        "---\n",
-        "A nested for loop is a loop inside another. It allows one to iterate through a multi dimentional list or matrix. Here'a an example of the nested for loop.\n",
-        "The outer loop iterates from 1 ... 3 values and for each value of the outer loop, the inner loop iterates from 1 ... 3.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "RnkL3gbuU7AY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "A nested *for* loop placed inside of another *for* loop. It allows one to iterate through a multi dimentional list or matrix. Here'a an example of the nested for loop. Nested *for* loops are useful for tasks like iterating through rows and columns of a 2D list, comparing each elementin one list to every element in another, or generating combinations of multiple variables."
+      ],
+      "metadata": {
+        "id": "4-IJ57UqvyqH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          for item in sequence1:\n",
+        "              for item in sequence2:\n",
+        "                  block of code"
+      ],
+      "metadata": {
+        "id": "ZrP5NL1uwhwI"
       }
     },
     {
@@ -7997,13 +8219,48 @@
       "cell_type": "markdown",
       "source": [
         "Nested for loop with break statements\n",
-        "---\n",
-        "The break statement terminates the innermost loop and passes control to the outer loop.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "weooHzAySRSM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "\n",
+        "A *for* loop with a *break* statement is used to exit the loop prematurely when a specific condition is met. Normally, a *for* loop iterates over all elements in a sequence, but *break* provides a way to stop the loop as soon as the desired result is found or stopping condition is triggered. This is particularly useful for search operations, where continuing the loop will not be necessary. Using *break* can improve efficiency by avoiding extra iterations when the goal is already achieved."
+      ],
+      "metadata": {
+        "id": "wQteuhE5w5z0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          for item in sequence1:\n",
+        "              for item in sequence2:\n",
+        "                  break"
+      ],
+      "metadata": {
+        "id": "C-KuL03_xwlY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "871GDctzx7rA"
       }
     },
     {
@@ -8050,13 +8307,47 @@
       "cell_type": "markdown",
       "source": [
         "Nested for loop with continue statements\n",
-        "---\n",
-        "The continue statement skips the current execution in the for loop.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "qWnUO8z1SWpb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "A nested *for* loop with a *continue* statement allows you to skip specific iterations within the inner or outer loop based on a condition. The *continue* statement immediately skips to the next iterationof the current loop level without executing the remaining code in that iteration. *continue* is very useful in nested *for* loops for filtering out specific values or conditions without braking the entire loop structure."
+      ],
+      "metadata": {
+        "id": "0AD2NpvSyPve"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          for item in sequence1:\n",
+        "              for item in sequence2:\n",
+        "                  continue"
+      ],
+      "metadata": {
+        "id": "-edQhkdiy-Mm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "kwq0R3LqzH65"
       }
     },
     {
