--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -9675,20 +9675,7 @@
       "cell_type": "markdown",
       "source": [
         "5.1 User-defined functions\n",
-        "---\n",
-        "Function is a block of orginized code to perform a specific action. Python language provides many built-in functions like print(), len(), range(), and ... However, you can create your own functions that are usually called user-define functions. Functions help to improve readability and usageability of your code.\n",
-        "Python reads the program from top to bottom and you need to define a function before yuo can use it. There are a few rules to define a function.\n",
-        "\n",
-        "1. A function declared using the def keyword following by a function name and parenthesis, and ending with a column.\n",
-        "2. Parameters can be placed inside of the parenthesis.\n",
-        "3. The code block or multiple statements should be indented.\n",
-        "4. The return statement will exit the function and pass a result to the caller.value\n",
-        "\n",
-        "---\n",
-        "\n",
-        "Syntax:\n",
-        "\n",
-        "        def functionName(parameters): block of code / return value\n"
+        "---"
       ],
       "metadata": {
         "id": "Wg0zS8uzfmxy"
@@ -9697,14 +9684,76 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Basics of user-defined functions\n",
-        "---\n",
-        "User-defined functions are created by a user to perform some specific tasks. You can organize your **code** in a clear and constractive manner.\n",
+        "Description\n",
         "\n",
+        "---\n",
+        "Function is a block of orginized code to perform a specific action. Python language provides many built-in functions like *print()*, *len()*, *range()*, and ... However, you can create your own functions that are usually called user-define functions. Functions help to improve readability and usageability of your code.\n",
+        "Python reads the program from top to bottom and you need to define a function before yuo can use it. There are a few rules to define a function.\n",
+        "\n",
+        "1. A function declared using the def keyword following by a function name and parenthesis, and ending with a column.\n",
+        "2. Parameters can be placed inside of the parenthesis.\n",
+        "3. The code block or multiple statements should be indented.\n",
+        "4. The return statement will exit the function and pass a result to the caller.value"
+      ],
+      "metadata": {
+        "id": "zWf43zmYIT3c"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          def functionName(parameters): block of code / return value\n"
+      ],
+      "metadata": {
+        "id": "CGQvvKu-IYX-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Basics of user-defined functions\n",
         "---"
       ],
       "metadata": {
         "id": "g4htAKhYwVNp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "User-defined functions allow programmers to create reusable blocks of code that perform specific tasks. A function is defined using the *def* keyword followed by the function name, parentheses, which may include parameters, and a colon. The function body is intended and contains the code to be executed when the function is called. Function can return values using *return* statement, or simply perform actions without returning anything. User defined functions make code more modular, readable, and easier to maintain by avoiding repetition and organizing logic into logical units."
+      ],
+      "metadata": {
+        "id": "Pi8bzaTPIxaB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          See examples below"
+      ],
+      "metadata": {
+        "id": "lx6R5c4gJqbh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "NBw5yfw5Jvmn"
       }
     },
     {
@@ -9771,16 +9820,44 @@
       "cell_type": "markdown",
       "source": [
         "Function with the return statement\n",
-        "---\n",
-        "The return statement inside of a function will terminate the function execution and return to the calling position with some return value. The return value can be any data type including int, float, complex data, data sequencies,\n",
-        "and user-defined objects like classes and functions.\n",
-        "\n",
-        "The return value can be omited or you can have a single return statement.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "KUH1VtuG01Au"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "---\n",
+        "A function with a *return* statement sends a value back to the part of the program where the function was called. The return statement inside of a function will terminate the function execution and return to the calling position with some return value. The return value can be any data type including int, float, complex data, data sequencies,and user-defined objects like classes and functions. The return value can be omited or you can have a single return statement. A function can have multiple *return* statements often within conditional blocks, but only one will be executed and function will exit. If no *return* statement is given, the function returns None by default. Using *return* allows the functions to produce outputs that can be reused elsewhere in a program, making them more versatile and powerful."
+      ],
+      "metadata": {
+        "id": "AgyqYZ_pJ-_w"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          See examples below"
+      ],
+      "metadata": {
+        "id": "5pwwEXtxKDhm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "u6jcwdoTKJJp"
       }
     },
     {
@@ -9811,22 +9888,10 @@
         "myFirstFunction()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "P8tdEAYyNeoz",
-        "outputId": "56c9fe43-411e-462f-9459-f81ae3d1cf01"
+        "id": "P8tdEAYyNeoz"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Before the return statement\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -9866,15 +9931,53 @@
       "cell_type": "markdown",
       "source": [
         "5.2 Global and local variables\n",
-        "---\n",
-        "Global variables are declared outside of any functions and have global scope, meaning that they can be accessed from any function or a statement.\n",
-        "Local variables are defined only inside of a function and have a local scope,\n",
-        "they valid only inside and can not be accessed from outside.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "mHnCtEfthjdC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "Local and global variables determine the scope and accessiblility of data within the program. A local variable is defined inside a function and can only be accessed within that function. In contrast, a global variable is defined outside any function and can be accessed throughout the entire Python program, including inside functions. If you want to modify a global variable variable within a function, you must use the *global* keyword, otherwise, Python will treat any assignments as creating a new local variable."
+      ],
+      "metadata": {
+        "id": "h5YXiTnWLQed"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          Local variable\n",
+        "\n",
+        "          def functionName():\n",
+        "              localVariable = value\n",
+        "\n",
+        "          Global variable\n",
+        "          \n",
+        "          def functionName():\n",
+        "              global globalVariable"
+      ],
+      "metadata": {
+        "id": "hiFlZq2UMTGQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "p6K8GjGwNKOl"
       }
     },
     {
