--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -10939,7 +10939,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "          def myFunction(sequence):\n",
+        "          def functionName(sequence):\n",
         "              block of code\n",
         "              modified_sequence = ...\n",
         "              return modified_sequence"
@@ -11075,16 +11075,7 @@
       "cell_type": "markdown",
       "source": [
         "5.6 Function annotations\n",
-        "---\n",
-        "Function annotations are optional and can be used for parameters and return values. It is a way of connecting some function expressions and other parts of functions. Annotation is always preceding the parameter's default value. Columns are used to define an annotation. Annotation for the excess parameters are also used as args and kwargs. Lambda function does not support annotations.\n",
-        "\n",
-        "---\n",
-        "\n",
-        "Syntax:\n",
-        "\n",
-        "      1. def functionName(a: expression, b: expression):\n",
-        "      2. def functionName() -> expression\n",
-        "      3. def functionName(*args: expression, **kwargs: expression)"
+        "---"
       ],
       "metadata": {
         "id": "J3KW5QWR5Z6u"
@@ -11093,20 +11084,74 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "Function annotations are optional and can be used for parameters and return values. It is a way of connecting some function expressions and other parts of functions. Annotation is always preceding the parameter's default value. Columns are used to define an annotation. Annotation for the excess parameters are also used as args and kwargs. Lambda function does not support annotations."
+      ],
+      "metadata": {
+        "id": "2eAvdxNpbZHr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          def functionName(a: expression, b: expression):\n",
+        "          def functionName() -> expression\n",
+        "          def functionName(*args: expression, **kwargs: expression)"
+      ],
+      "metadata": {
+        "id": "tdwa38XFbdHl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Return value annotation\n",
-        "---\n",
-        "You can see the -> operator in some functions, which is the return value annotation. It is optional, it is just for information only and makes no difference for the interpreter.\n",
-        "\n",
-        "---\n",
-        "\n",
-        "Syntax:\n",
-        "\n",
-        "        def functionName(parameter) -> type:\n",
-        "          block of code\n",
-        "          return value"
+        "---"
       ],
       "metadata": {
         "id": "fcNE2ApaZtSb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "You can see the -> operator in some functions, which is the return value annotation. It is optional, it is just for information only and makes no difference for the interpreter."
+      ],
+      "metadata": {
+        "id": "MJcFE017bo2P"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          def functionName(parameter) -> type:\n",
+        "              block of code\n",
+        "              return value"
+      ],
+      "metadata": {
+        "id": "9L10TBxnbtgi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "8XJ65DN3b3EJ"
       }
     },
     {
